# query-expansion

./: .gitignore  main.py  pyproject.toml  scratchpad.py  wbs.md
cache/audit_label/: 0.json  1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  101.json  1010.json  1011.json  1012.json  1015.json  1016.json  1017.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  1036.json  1037.json  1038.json  (+1179 more)
cache/audit_label_OLD/: 0.json  1.json  101.json  106.json  108.json  111.json  12.json  13.json  15.json  18.json  21.json  27.json  28.json  34.json  36.json  38.json  39.json  41.json  42.json  50.json  55.json  56.json  62.json  67.json  68.json  69.json  70.json  71.json  76.json  78.json  82.json  84.json  90.json  95.json  98.json
cache/category_metadata/: 0.json  1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  103.json  (+1385 more)
indices/: cached_audits-1684748300.json  cached_audits-1684748513.json  cached_audits-1684789390.json  cached_audits.json  cached_metadata-1684601266.json  cached_metadata-1684707728.json  cached_metadata-1684720630.json  cached_metadata.json
(+52 files in other folders)
